# youtube-analytics-project

./: pyproject.toml
data/: config.py  moscowpython.json
homework-2/: main.py
homework-4/: README.md
src/: channel.py  playlist.py  video.py
